@@ -1,5 +1,6 @@
 package co.edu.utp.gia.sms.negocio;
 
+import co.edu.utp.gia.sms.db.DB;
 import co.edu.utp.gia.sms.dtos.ReferenciaDTO;
 import co.edu.utp.gia.sms.entidades.*;
 import co.edu.utp.gia.sms.exceptions.LogicException;
@@ -13,7 +14,6 @@ import java.util.Calendar;
 import java.util.Comparator;
 import java.util.List;
 import java.util.logging.Level;
-import java.util.stream.Collectors;
 
 // TODO Pendiente la indicación de las revistas con mayor frecuencia dentro del SMS.
 //      importante para la toma de decisión sobre el destino de publicación.
@@ -30,7 +30,7 @@ import java.util.stream.Collectors;
  */
 @Stateless
 @Log
-public class ReferenciaEJB extends AbstractEJB<Referencia, Integer> {
+public class ReferenciaEJB extends AbstractGenericService<Referencia, String> {
     @Inject
     private RevisionService revisionService;
     @Inject
@@ -47,58 +47,39 @@ public class ReferenciaEJB extends AbstractEJB<Referencia, Integer> {
     private ProcesoService procesoService;
 
     public ReferenciaEJB() {
-        super(Referencia.class, dataProvider);
+        super(DB.root.getProvider(Referencia.class));
     }
 
-    public Referencia registrar(Referencia referencia, String idRevision, String idPasoProceso) {
-        Revision revision = revisionService.obtener(idRevision);
-
-        referencia.setFiltro(idPasoProceso);
-//        for (Metadato metadato : referencia.getMetadatos()) {
-//            if (metadato.getIdentifier().equals(TipoMetadato.FUENTE)
-//                    && metadato.getValue().equalsIgnoreCase(Fuente.INCLUSION_DIRECTA.toString())) {
-//                referencia.setFiltro(3);
-//            }
-//        }
-        registrar(referencia);
+    public Referencia save(Referencia referencia, String idPasoProceso) {
+        //referencia.setFiltro(idPasoProceso);
+        save(referencia);
         procesoService.addReferencia(idPasoProceso, referencia);
         return referencia;
     }
 
-    public void registrar(List<Referencia> referencias, Integer idRevision, Integer idPasoProceso) {
+    public void save(List<Referencia> referencias,  String idPasoProceso) {
         for (Referencia referencia : referencias) {
-            registrar(referencia, idRevision, idPasoProceso);
+            save(referencia, idPasoProceso);
         }
     }
 
-    /**
-     * Permite obtener el listado de referencias seleccionadas de una revision
-     *
-     * @param id Identificador de la revision
-     * @return Listado de {@link Referencia} seleccionadas de la {@link Revision} identificada con
-     * el id dado
-     */
-    public List<ReferenciaDTO> obtenerSeleccionadas(int id) {
-        return poblarReferenciaDTOS(ReferenciaGetAll.createQuery(entityManager,id).getResultList());
+    public List<ReferenciaDTO> findByPaso(String idPaso) {
+        PasoProceso paso = procesoService.findOrThrow(idPaso);
+        return findByPaso(paso);
     }
 
-    public List<ReferenciaDTO> obtenerTodas(int idPaso) {
-        PasoProceso paso = procesoService.obtenerOrThrow(idPaso);
-        return obtenerTodas(paso);
-    }
-
-    private List<ReferenciaDTO> obtenerTodas(PasoProceso paso) {
+    private List<ReferenciaDTO> findByPaso(PasoProceso paso) {
         return poblarReferenciaDTOS(paso.getReferencias().stream()
                 .sorted(Comparator.comparing(Referencia::getNombre))
-                .map(r -> new ReferenciaDTO(r, paso.getId())).collect(Collectors.toList()));
+                .map(r -> new ReferenciaDTO(r, paso.getOrden())).toList());
     }
 
     private List<ReferenciaDTO> poblarReferenciaDTOS(List<ReferenciaDTO> referencias) {
         for (ReferenciaDTO referencia : referencias) {
-            referencia.setAutores(obtenerAutores(referencia.getId()));
-            referencia.setAbstracts(obtenerAbstract(referencia.getId()));
-            referencia.setKeywords(obtenerKeywords(referencia.getId()));
-            referencia.setFuente(obtenerFuente(referencia.getId()));
+            referencia.setAutores(getAutores(referencia.getId()));
+            referencia.setAbstracts(getAbstract(referencia.getId()));
+            referencia.setKeywords(getKeywords(referencia.getId()));
+            referencia.setFuente(getFuente(referencia.getId()));
             referencia.setMetadatos(metadatoServices.obtenerMetadatos(referencia.getId()));
         }
         return referencias;
@@ -111,50 +92,34 @@ public class ReferenciaEJB extends AbstractEJB<Referencia, Integer> {
      * @return {@link Fuente} a la que pertenece la {@link Referencia} que
      * corresponde al id proporcionado
      */
-    private Fuente obtenerFuente(Integer id) {
-        return ReferenciaGetFuentes.createQuery(entityManager,id).getResultList().stream().findFirst().orElse(null);
-        //return Fuente.valueOf(metadatoServices.obtenerStringMetadatoByTipo(id, TipoMetadato.FUENTE));
+    private Fuente getFuente(String id) {
+        return ReferenciaGetFuentes.createQuery(id).findFirst().orElse(null);
     }
 
     /**
      * Permite obtener el listado de referencias de una revision que han pasado por
      * un determinado filtro
      *
-     * @param idRevision Identificador de la revision
      * @return Listado de {@link Pregunta} de la {@link Revision} identificada con
      * el id dado
      */
-    public List<ReferenciaDTO> obtenerTodasConEvaluacion(int idRevision) {
-        Revision revision = revisionService.obtenerOrThrow(idRevision);
-        List<ReferenciaDTO> referencias = obtenerTodas(revision.getPasoSeleccionado());
+    public List<ReferenciaDTO> findWithEvaluacion() {
+        List<ReferenciaDTO> referencias = findByPaso( revisionService.get().getPasoSeleccionado() );
         for (ReferenciaDTO referencia : referencias) {
             referencia.setEvaluaciones(referencia.getEvaluaciones());
         }
         return referencias;
     }
 
-//	public List<ReferenciaDTO> obtenerTodas(int idRevision, int filtro) {
-//		List<ReferenciaDTO> lista = new ArrayList<ReferenciaDTO>();
-//
-//		System.out.println("USANDO FILTRO "+filtro);
-//		entityManager.createNamedQuery(Referencia.REFERENCIA_GET_ALL, Referencia.class)
-//				.setParameter("idRevision", idRevision).setParameter("filtro", filtro).getResultList().stream()
-//				.forEach((r) -> {
-//					lista.add(new ReferenciaDTO(r, filtro));
-//				});
-//
-//		return lista;
-//	}
-
-    public String obtenerAutores(Integer idReferencia) {
+    public String getAutores(String idReferencia) {
         return metadatoServices.obtenerStringMetadatoByTipo(idReferencia, TipoMetadato.AUTOR);
     }
 
-    public String obtenerKeywords(Integer idReferencia) {
+    public String getKeywords(String idReferencia) {
         return metadatoServices.obtenerStringMetadatoByTipo(idReferencia, TipoMetadato.KEYWORD);
     }
 
-    public String obtenerAbstract(Integer idReferencia) {
+    public String getAbstract(String idReferencia) {
         return metadatoServices.obtenerStringMetadatoByTipo(idReferencia, TipoMetadato.ABSTRACT);
     }
 
@@ -175,9 +140,9 @@ public class ReferenciaEJB extends AbstractEJB<Referencia, Integer> {
 //        referencia.setFiltro(filtro);
 //    }
 
-    public void guardarEvaluacion(EvaluacionCalidad evaluacion) {
-        evaluacionCalidadService.actualizar(evaluacion);
-        Referencia referencia = obtener(evaluacion.getReferencia().getId());
+    public void saveEvaluacion(EvaluacionCalidad evaluacion) {
+        evaluacionCalidadService.update(evaluacion);
+        Referencia referencia = findOrThrow(evaluacion.getReferencia().getId());
         referencia.setTotalEvaluacionCalidad(calcularTotalEvaluacionCalidad(referencia.getId()).floatValue());
     }
 
@@ -187,31 +152,31 @@ public class ReferenciaEJB extends AbstractEJB<Referencia, Integer> {
      * @param id Id de la {@link co.edu.utp.gia.sms.entidades.Referencia}
      * @return Double con el total de la evaluación de calidad de la referencia dada
      */
-    private Double calcularTotalEvaluacionCalidad(Integer id) {
-        return ReferenciaGetTotalEvaluacionCalidad.createQuery(entityManager, id).getSingleResult();
+    private Double calcularTotalEvaluacionCalidad(String id) {
+        return ReferenciaGetTotalEvaluacionCalidad.createQuery(id).sum();
     }
 
-    public void adicionarTopico(Integer id, Integer idTopico) {
-        Referencia referencia = obtener(id);
-        Topico topico = topicoService.obtener(idTopico);
+    public void addTopico(String id, String idTopico) {
+        Referencia referencia = findOrThrow(id);
+        Topico topico = topicoService.findOrThrow(idTopico);
         referencia.getTopicos().add(topico);
     }
 
-    public void limpiarTopicos(Integer id) {
-        Referencia referencia = obtener(id);
+    public void cleanTopicos(String id) {
+        Referencia referencia = findOrThrow(id);
         referencia.getTopicos().clear();
     }
 
-    public void actualizarRelevancia(Integer id, Integer relevancia) {
-        Referencia referencia = obtener(id);
+    public void updateRelevancia(String id, Integer relevancia) {
+        Referencia referencia = findOrThrow(id);
         if (referencia != null) {
             referencia.setRelevancia(relevancia);
         }
     }
 
-    public void actualizarCita(Integer id, Integer citas) {
+    public void updateCita(String id, Integer citas) {
 
-        Referencia referencia = obtener(id);
+        Referencia referencia = findOrThrow(id);
         if (referencia != null) {
             referencia.setCitas(citas);
             if (referencia.getYear() == null) {
@@ -229,30 +194,29 @@ public class ReferenciaEJB extends AbstractEJB<Referencia, Integer> {
 
     }
 
-    public void actualizarNota(Integer id, String nota) {
+    public void updateNota(String id, String nota) {
 
-        Referencia referencia = obtener(id);
+        Referencia referencia = findOrThrow(id);
         if (referencia != null) {
             referencia.setNota(nota);
         }
     }
 
-    public void actualizarResumen(Integer id, String resumen) {
-        Referencia referencia = obtener(id);
+    public void updateResumen(String id, String resumen) {
+        Referencia referencia = findOrThrow(id);
         if (referencia != null) {
             referencia.setResumen(resumen);
         }
     }
 
-    public void removerTopico(Integer id, Integer idTopico) {
-        Referencia referencia = obtener(id);
-        Topico topico = entityManager.find(Topico.class, idTopico);
+    public void updateTopico(String id, String idTopico) {
+        Referencia referencia = findOrThrow(id);
+        Topico topico =  topicoService.findOrThrow(idTopico);
         referencia.getTopicos().remove(topico);
-
     }
 
-    public void evaluacionAutomatica(Integer id) {
-        Referencia referencia = obtener(id);
+    public void evaluacionAutomatica(String id) {
+        Referencia referencia = findOrThrow(id);
         if (referencia == null) {
             throw new LogicException(exceptionMessage.getRegistroNoEncontrado());
         }
@@ -279,7 +243,7 @@ public class ReferenciaEJB extends AbstractEJB<Referencia, Integer> {
             evaluacionCalidad.setEvaluacionCualitativa(EvaluacionCualitativa.CUMPLE);
         }
 
-        guardarEvaluacion(evaluacionCalidad);
+        saveEvaluacion(evaluacionCalidad);
     }
 
     private void evaluarSegunCitas(Referencia referencia) {
@@ -308,7 +272,7 @@ public class ReferenciaEJB extends AbstractEJB<Referencia, Integer> {
             evaluacionCalidad.setEvaluacionCualitativa(EvaluacionCualitativa.NO_CUMPLE);
         }
 
-        guardarEvaluacion(evaluacionCalidad);
+        saveEvaluacion(evaluacionCalidad);
 
     }
 
@@ -346,7 +310,7 @@ public class ReferenciaEJB extends AbstractEJB<Referencia, Integer> {
             evaluacionCalidad.setEvaluacionCualitativa(EvaluacionCualitativa.NO_CUMPLE);
         }
         referencia.setSrrqi(porcentaje);
-        guardarEvaluacion(evaluacionCalidad);
+        saveEvaluacion(evaluacionCalidad);
 
     }
 
@@ -356,8 +320,8 @@ public class ReferenciaEJB extends AbstractEJB<Referencia, Integer> {
      * @param id Id de la {@link co.edu.utp.gia.sms.entidades.Referencia}
      * @return número de preguntas relacionadas con una referencia
      */
-    private long calcularTotalPreguntasRelacionadas(Integer id) {
-        return ReferenciaCountPreguntaRelacionada.createQuery(entityManager, id).getSingleResult();
+    private long calcularTotalPreguntasRelacionadas(String id) {
+        return ReferenciaGetPreguntaRelacionada.createQuery(id).count();
     }
 
     /**
@@ -366,11 +330,11 @@ public class ReferenciaEJB extends AbstractEJB<Referencia, Integer> {
      * @return List<Float> listado de los SCI de las referencias de una revision
      */
     private List<Float> obtenerSCIs() {
-        return ReferenciaGetAllSCI.createQuery(entityManager, id).getResultList();
+        return ReferenciaGetAllSCI.createQuery().toList();
     }
 
-    public void actualizarSPS(Integer id, String spsid) {
-        Referencia referencia = obtener(id);
+    public void updateSPS(String id, String spsid) {
+        Referencia referencia = findOrThrow(id);
         if (referencia != null) {
             referencia.setSpsid(spsid);
         }
@@ -379,33 +343,32 @@ public class ReferenciaEJB extends AbstractEJB<Referencia, Integer> {
     /**
      * Consulta que permite obtener las referencias con una determinada calificación de un atributo de calidad dado
      *
-     * @param id                Id de la {@link co.edu.utp.gia.sms.entidades.Referencia}
      * @param idAtributoCalidad Id del atributo de calidad
      * @param valorEvaluacion   Evaluación que deben cumplir las referencias seleccionadas
      * @return List<ReferenciaDTO> listado de las referencias que cumplen con la evaluación solicitada en el atributo de calidad dado
      */
-    public List<ReferenciaDTO> obtenerReferenciasAtributoCalidadEvaluacion(Integer id,
-                                                                           Integer idAtributoCalidad, EvaluacionCualitativa valorEvaluacion) {
+    public List<ReferenciaDTO> obtenerReferenciasAtributoCalidadEvaluacion(
+            String idAtributoCalidad, EvaluacionCualitativa valorEvaluacion) {
         return poblarReferenciaDTOS(
                 ReferenciaGetAllByEvaluacionOfAtributoCalidad
-                        .createQuery(entityManager, id, idAtributoCalidad, valorEvaluacion).getResultList());
+                        .createQuery(idAtributoCalidad, valorEvaluacion)
+                        .map(r -> new ReferenciaDTO(r, 0)).toList());
     }
 
     /**
      * Consulta que permite obtener las referencias con evaliacón de un atributo de calidad dado
      *
-     * @param id                Id de la {@link co.edu.utp.gia.sms.entidades.Referencia}
      * @param idAtributoCalidad Id del atributo de calidad
      * @return List<ReferenciaDTO> Listado de las con evaliacón de un atributo de calidad del id dado
      */
-    public List<ReferenciaDTO> obtenerReferenciasAtributoCalidadEvaluacion(Integer id,
-                                                                           Integer idAtributoCalidad) {
-        return poblarReferenciaDTOS(ReferenciaGetAllWithEvaluacionOfAtributoCalidad.createQuery(
-                entityManager, id, idAtributoCalidad).getResultList());
+    public List<ReferenciaDTO> obtenerReferenciasAtributoCalidadEvaluacion(
+                                                                           String idAtributoCalidad) {
+        return poblarReferenciaDTOS(ReferenciaGetAllWithEvaluacionOfAtributoCalidad.createQuery(idAtributoCalidad)
+                .map(r -> new ReferenciaDTO(r, 0)).toList());
     }
 
-    public void actualizarYear(Integer id, String year) {
-        Referencia referencia = obtener(id);
+    public void actualizarYear(String id, String year) {
+        Referencia referencia = findOrThrow(id);
         if (referencia != null) {
             referencia.setYear(year);
             if (referencia.getCitas() != null && referencia.getYear() != null) {
@@ -419,32 +382,34 @@ public class ReferenciaEJB extends AbstractEJB<Referencia, Integer> {
     /**
      * Consulta que permite obtener los Referencias que han recivido una valoración de su contenido
      *
-     * @param id Id de la Revision
      * @return List<ReferenciaDTO> listado de las referencias destacadas, en caso de no haber ninguna el listado sera vacio
      */
-    public List<ReferenciaDTO> obtenerDestacadas(Integer id) {
-        return poblarReferenciaDTOS(ReferenciaGetDestacadas.createQuery(entityManager, id).getResultList());
+    public List<ReferenciaDTO> obtenerDestacadas() {
+        return poblarReferenciaDTOS( ReferenciaGetDestacadas.createQuery().map(r -> new ReferenciaDTO(r, 0)).toList());
     }
 
-    public void avanzarReferecias(int idPaso) {
-        if (idPaso >= 1) {
-            PasoProceso paso = procesoService.obtenerOrThrow(idPaso);
-            PasoProceso pasoSiguiente = procesoService.obtenerOrThrow(idPaso + 1);
+    public void avanzarReferecias(String idPaso) {
+//        if (idPaso >= 1) {
+            PasoProceso paso = procesoService.findOrThrow(idPaso);
+            PasoProceso pasoSiguiente = procesoService.findByOrden(paso.getOrden()+1);
             paso.getReferencias().forEach(
                     r -> {
-                        if (r.getFiltro() == null || r.getFiltro() < (idPaso + 1)) {
-                            r.setFiltro(idPaso + 1);
                             if (!pasoSiguiente.getReferencias().contains(r)) {
                                 pasoSiguiente.getReferencias().add(r);
                             }
                         }
-                    }
+//                        if (r.getFiltro() == null || r.getFiltro() < (idPaso + 1)) {
+//                            r.setFiltro(idPaso + 1);
+//                            if (!pasoSiguiente.getReferencias().contains(r)) {
+//                                pasoSiguiente.getReferencias().add(r);
+//                            }
+//                        }
             );
-        }
+//        }
     }
 
-    public void referenciaDuplicada(Integer id, Boolean duplicada) {
-        Referencia referencia = obtenerOrThrow(id);
+    public void updateDuplicada(String id, Boolean duplicada) {
+        Referencia referencia = findOrThrow(id);
         referencia.setDuplicada(duplicada);
     }
 }
